# cv-generator

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/cv_generator/: app.py  main.py
