[project]
name = "cv-generator"
version = "0.1.0"
description = ""
authors = [{ name = "Estio", email = "estio0011@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["uvicorn (>=0.35.0,<0.36.0)", "fastapi (>=0.116.1,<0.117.0)"]

[tool.poetry]
packages = [{ include = "cv_generator", from = "src" }]

scripts = { cv-generator = "cv_generator.main:start" }

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
