[project]
name = "cv-generator"
version = "0.1.0"
description = ""
authors = [{ name = "Estio", email = "estio0011@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["uvicorn (>=0.35.0,<0.36.0)", "fastapi (>=0.116.1,<0.117.0)"]

[tool.poetry]
packages = [{ include = "cv_generator", from = "src" }]

scripts = { cv-generator = "cv_generator.main:start" }

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.3.0"
pylint = "^3.3.8"
black = "^25.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

# Tools
[tool.black]
line-length = 120

[tool.pylint.MASTER]
init-hook = "import sys; sys.path.append('src')"

[tool.pylint.MESSAGES_CONTROL]
disable = [
    "C0114",
    "C0116", # missing-function-docstring
    "C0301",
]

[tool.pylint.FORMAT]
max-line-length = 120

[tool.pylint.SIMILARITIES]
min-similarity-lines = 4
ignore-comments = true
ignore-docstrings = true
ignore-imports = false
